GraphQLClient app handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-lec=lec15
+lec=lec16
 
 #graphql schema file location and it is default property
 spring.graphql.schema.locations=classpath:graphql/${lec}
@@ -18,3 +18,5 @@ spring.graphql.graphiql.path=/graphiql
 graphql.playground.enabled=true
 
 logging.level.root=INFO
+
+customer.service.url=http://localhost:8080/graphql
