graphql client subscription and muattion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-lec=lec16
+lec=lec17
 
 #graphql schema file location and it is default property
 spring.graphql.schema.locations=classpath:graphql/${lec}
@@ -20,3 +20,4 @@ graphql.playground.enabled=true
 logging.level.root=INFO
 
 customer.service.url=http://localhost:8080/graphql
+customer.events.subscription.url=ws://localhost:8080/graphql
